--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="IWAXY" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
-   <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
+   <link href="http://feeds.feedburner.com/iwaxy" rel="alternate" title="IWAXY.COM" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -45,13 +44,14 @@ var WRInitTime=(new Date()).getTime();
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/iwaxy</a><br />
+        <a href="http://github.com/iwaxy">iwaxy</a><br />
         
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="http://feeds.feedburner.com/IWAXY">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
+		<img src="/images/GooglePlus.png" width=63 height=62 alt="View Me on Google+" />
       </a>
     </div>
   </div>
