--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,11 @@ var WRInitTime=(new Date()).getTime();
       </p>
     </div>
     <div class="rss">
+	  <a href="https://plus.google.com/100332912805281706931">
+		<img src="/images/GooglePlus.png" width=61 height=60 alt="View Me on Google+" />
+	  </a>
       <a href="http://feeds.feedburner.com/IWAXY">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-		<img src="/images/GooglePlus.png" width=63 height=62 alt="View Me on Google+" />
       </a>
     </div>
   </div>
