--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="IWAXY" />
+   <link href="http://feeds.feedburner.com/iwaxy" rel="alternate" title="IWAXY.COM" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -25,9 +26,8 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">IWAXY.COM</a>
-    <a class="extra" href="/">首页</a>
-	<a class="extra" href="/">关于IWAXY</a>
+    <a href="/">首页</a>
+	<a href="/">关于IWAXY.COM</a>
   </div>
   
   {{ content }}
@@ -43,9 +43,9 @@ var WRInitTime=(new Date()).getTime();
 
     <div class="rss">
 	  <a href="https://plus.google.com/100332912805281706931">
-		<img src="/images/GooglePlus.png" width=59 height=57 alt="View Me on Google+" />
+		<img src="/images/GooglePlus.png" width=57 height=55 alt="View Me on Google+" />
 	  </a>
-      <a href="">
+      <a href="http://feeds.feedburner.com/IWAXY">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
