--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,6 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="IWAXY" />
-   <link href="http://feeds.feedburner.com/iwaxy" rel="alternate" title="IWAXY.COM" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -45,7 +44,7 @@ var WRInitTime=(new Date()).getTime();
 	  <a href="https://plus.google.com/100332912805281706931">
 		<img src="/images/GooglePlus.png" width=57 height=55 alt="View Me on Google+" />
 	  </a>
-      <a href="http://feeds.feedburner.com/IWAXY">
+      <a href="">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
