--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -25,8 +25,8 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">首页</a>
-	<a href="/">关于IWAXY.COM</a>
+    <a href="/">| 首页</a>
+	<a href="/">| 关于IWAXY.COM |</a>
   </div>
   
   {{ content }}
