update new logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,10 +42,10 @@ var WRInitTime=(new Date()).getTime();
 
     <div class="rss">
 	  <a href="https://plus.google.com/100332912805281706931">
-		<img src="/images/GooglePlus.png" width=57 height=55 alt="View Me on Google+" />
+		<img src="/images/gplus.jpg" width=55 height=55 alt="View Me on Google+" />
 	  </a>
       <a href="">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
+        <img src="/images/rss.jpg" width=55 height=55 alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
